--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -27,11 +27,11 @@
         android:layout_marginTop="24dp"
         android:text="C"
         android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/num27"
+        app:layout_constraintStart_toEndOf="@+id/btnClearEverything"
         app:layout_constraintTop_toBottomOf="@+id/tvMain" />
 
     <Button
-        android:id="@+id/num27"
+        android:id="@+id/btnClearEverything"
         android:layout_width="155dp"
         android:layout_height="50dp"
         android:layout_marginStart="28dp"
@@ -199,7 +199,7 @@
         android:text="1"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/num27" />
+        app:layout_constraintTop_toBottomOf="@+id/btnClearEverything" />
 
     <Button
         android:id="@+id/num2"
@@ -210,7 +210,7 @@
         android:text="2"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/num1"
-        app:layout_constraintTop_toBottomOf="@+id/num27" />
+        app:layout_constraintTop_toBottomOf="@+id/btnClearEverything" />
 
     <Button
         android:id="@+id/num5"
